--- a/src/main/resources/hardware_overview.vm
+++ b/src/main/resources/hardware_overview.vm
@@ -19,6 +19,7 @@
     <title>$i18n.getText("admin_helper.admin.label")</title>
     <meta name="decorator" content="atl.general"/>
     <meta name="application-base-url" content="$applicationProperties.getBaseUrl()">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.1.1/list.min.js"></script>
     $webResourceManager.requireResource("org.catrobat.jira.AdminHelper:hardware-resources")
 </head>
 <body>
