--- a/src/main/resources/hardware_overview.vm
+++ b/src/main/resources/hardware_overview.vm
@@ -74,6 +74,7 @@
             </thead>
             <tbody class="list" id="table-overview-body">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="6"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
     </div>
@@ -104,6 +105,7 @@
             </thead>
             <tbody class="list" id="table-lent-out">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="8"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
     </div>
@@ -133,6 +135,7 @@
             </thead>
             <tbody class="list" id="table-active-devices">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="8"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
     </div>
@@ -160,6 +163,7 @@
             </thead>
             <tbody class="list" id="table-sorted-out">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="6"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
     </div>
@@ -190,6 +194,7 @@
             </thead>
             <tbody class="list" id="table-all-devices">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="9"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
     </div>
@@ -218,6 +223,7 @@
             </thead>
             <tbody class="list" id="table-management">
             #* will be filled out by JavaScript *#
+            <tr><td colspan="7"><span class="aui-icon aui-icon-wait">Loading...</span></td></tr>
             </tbody>
         </table>
         <p>
