--- a/src/main/resources/css/admin_helper.css
+++ b/src/main/resources/css/admin_helper.css
@@ -48,6 +48,20 @@
     width: 400px;
 }
 
+div.loadingDiv{
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin-left: 240px;
+    padding-top: 20px;
+    padding-left: 20px;
+    vertical-align: middle;
+    background-color: rgba(0,0,0,0.5);
+}
+
 div.change-details {
     float: right;
     margin-top: 5px;
