--- a/src/main/resources/modify_user.vm
+++ b/src/main/resources/modify_user.vm
@@ -24,6 +24,7 @@
 </head>
 <body class="aui-layout aui-theme-default">
 <div id="aui-message-bar"></div>
+<div class="loadingDiv"><span class="aui-icon aui-icon-wait">Loading...</span></div>
 <div id="modify-user">
     <header class="aui-page-header">
         <div class="left-from-search-field">
