fixed a bug with github and modifying users
  * also added the functionality to configure a default github team
  * changed the user creation process - the user won't be added to any
    github team except the default github team if selected

--- a/src/main/resources/admin.vm
+++ b/src/main/resources/admin.vm
@@ -99,6 +99,10 @@
                             href="https://github.com/blog/1509-personal-api-tokens">token</a> with "admin:org" scope.
                     </div>
                 </div>
+                <div class="field-group">
+                    <label for="default-github-team">Default GitHub Team</label>
+                    <input class="text github-single" type="text" id="default-github-team" name="default-github-team">
+                </div>
             </fieldset>
             <h2>Team Configuration</h2>
 
